[gd_scene load_steps=40 format=3 uid="uid://byw2vrqxq0slp"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_8rkdc"]
[ext_resource type="Script" path="res://src/player/collision_helper.gd" id="2_nugat"]
[ext_resource type="Texture2D" uid="uid://dkljmhd55cuf7" path="res://src/ui/assets/yokai_watch/watch_background.png" id="3_vg27x"]
[ext_resource type="Texture2D" uid="uid://du8uv32dgooga" path="res://src/ui/assets/objective/objective_background.png" id="4_iykhr"]
[ext_resource type="Texture2D" uid="uid://c3756j3mw414p" path="res://res/player/interaction/standart.png" id="5_xhpu7"]
[ext_resource type="Texture2D" uid="uid://bmjy5b8irtbc2" path="res://src/ui/assets/yokai_watch/watch_handle.png" id="6_0bvqj"]
[ext_resource type="Texture2D" uid="uid://bcfi1oo3fw0ps" path="res://res/player/sprint_bar.png" id="6_8lpum"]
[ext_resource type="Texture2D" uid="uid://dhljdg0vrtbbc" path="res://res/player/player_spirte.png" id="7_aji27"]
[ext_resource type="Texture2D" uid="uid://3x5sis7nbw0x" path="res://res/tilesets/exterior_assets/test/test_03.png" id="9_m7onc"]

[sub_resource type="Animation" id="Animation_1ulla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bottom_bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(120, 127)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../space_button:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 0.75)]
}

[sub_resource type="Animation" id="Animation_3w5pr"]
resource_name = "hide_objective"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bottom_bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120, 127), Vector2(120, 143)]
}

[sub_resource type="Animation" id="Animation_fl0r0"]
resource_name = "show_objective"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bottom_bar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(120, 143), Vector2(120, 127)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7c0ks"]
_data = {
"RESET": SubResource("Animation_1ulla"),
"hide_objective": SubResource("Animation_3w5pr"),
"show_objective": SubResource("Animation_fl0r0")
}

[sub_resource type="Animation" id="Animation_tmslx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 0.75)]
}

[sub_resource type="Animation" id="Animation_lbmlm"]
resource_name = "constant"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_button:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(0.9, 0.9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0rs1"]
_data = {
"RESET": SubResource("Animation_tmslx"),
"constant": SubResource("Animation_lbmlm")
}

[sub_resource type="Animation" id="Animation_vwhad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_r1m5m"]
resource_name = "idle_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_j67w7"]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_d14kp"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_lfqjl"]
resource_name = "idle_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_tbpvm"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_ay1w1"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_j4q2x"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 6]
}

[sub_resource type="Animation" id="Animation_qdj42"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_68885"]
_data = {
"RESET": SubResource("Animation_vwhad"),
"idle_down": SubResource("Animation_r1m5m"),
"idle_left": SubResource("Animation_j67w7"),
"idle_right": SubResource("Animation_d14kp"),
"idle_up": SubResource("Animation_lfqjl"),
"walk_down": SubResource("Animation_tbpvm"),
"walk_left": SubResource("Animation_ay1w1"),
"walk_right": SubResource("Animation_j4q2x"),
"walk_up": SubResource("Animation_qdj42")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cs2ei"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2y5f5"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3k5sw"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w7jky"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_nnu7v"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cs2ei")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_2y5f5")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3k5sw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_w7jky")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sj6bt"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1gyp2"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xvkm1"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_en447"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_pbk0b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sj6bt")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1gyp2")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_xvkm1")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_en447")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nbrad"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u4s3d"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_epdln"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_nnu7v")
states/idle/position = Vector2(200, 189)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_pbk0b")
states/walk/position = Vector2(329, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_nbrad"), "Start", "walk", SubResource("AnimationNodeStateMachineTransition_u4s3d")]
graph_offset = Vector2(-179, 29)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_8rkdc")

[node name="collision_helper" type="Node2D" parent="."]
script = ExtResource("2_nugat")

[node name="hurtbox" type="Area2D" parent="collision_helper"]
position = Vector2(-9, -4)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collision_helper/hurtbox"]
position = Vector2(0, -10)
polygon = PackedVector2Array(-2, 10, -2, 14, 2, 14, 2, 10)

[node name="player" type="Area2D" parent="collision_helper"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collision_helper/player"]
polygon = PackedVector2Array(-16, -48, -40, -24, -40, 8, -16, 32, 16, 32, 40, 8, 40, -24, 16, -48)

[node name="ui" type="Node2D" parent="."]

[node name="sprint_bar" type="Sprite2D" parent="ui"]
visible = false
position = Vector2(14, -14)
texture = ExtResource("6_8lpum")
hframes = 4

[node name="sprint_timer" type="Timer" parent="ui/sprint_bar"]
wait_time = 2.0

[node name="space_button" type="Sprite2D" parent="ui"]
visible = false
position = Vector2(1, -39)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_xhpu7")

[node name="space_button2" type="Sprite2D" parent="ui"]
visible = false
position = Vector2(1, -39)
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_xhpu7")

[node name="player_ui" type="CanvasLayer" parent="ui"]

[node name="WatchBackground" type="Sprite2D" parent="ui/player_ui"]
position = Vector2(216, 16)
texture = ExtResource("3_vg27x")

[node name="WatchHandle" type="Sprite2D" parent="ui/player_ui/WatchBackground"]
position = Vector2(3.5, 3.5)
rotation = -1.9059
scale = Vector2(1, 1.15)
texture = ExtResource("6_0bvqj")
metadata/_edit_lock_ = true

[node name="bottom_bar" type="Sprite2D" parent="ui/player_ui"]
position = Vector2(120, 127)
texture = ExtResource("4_iykhr")

[node name="ui_anim_player" type="AnimationPlayer" parent="ui/player_ui"]
libraries = {
"": SubResource("AnimationLibrary_7c0ks")
}

[node name="button_ui" type="AnimationPlayer" parent="ui"]
libraries = {
"": SubResource("AnimationLibrary_y0rs1")
}
autoplay = "constant"

[node name="player_sprite" type="Sprite2D" parent="."]
position = Vector2(1, -16)
texture = ExtResource("7_aji27")
hframes = 4
vframes = 4
frame = 4

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_68885")
}

[node name="anim_tree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_epdln")
anim_player = NodePath("../anim_player")
parameters/idle/blend_position = Vector2(0.00454545, 0.0378007)
parameters/walk/blend_position = Vector2(0, 0.00653601)

[node name="camera" type="Camera2D" parent="."]

[node name="hitbox" type="CollisionPolygon2D" parent="."]
position = Vector2(0, -10)
polygon = PackedVector2Array(-7, 6, -7, 10, 7, 10, 7, 6)

[node name="test" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -16)
texture = ExtResource("9_m7onc")

[connection signal="area_entered" from="collision_helper/hurtbox" to="collision_helper" method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="collision_helper/hurtbox" to="collision_helper" method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="collision_helper/player" to="collision_helper" method="_on_player_area_entered"]
